--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,13 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+    "@openzeppelin=lib/openzeppelin-contracts",
+    "@chainlink=lib/chainlink-brownie-contracts",
+]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[invariant]
+fail_on_revert = false
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-optionsruns = 128
+depth = 128
+runs = 128
