--- a/foundry.toml
+++ b/foundry.toml
@@ -8,7 +8,7 @@ remappings = [
 ]
 
 [invariant]
-fail_on_revert = false
+fail_on_revert = true
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-optionsruns = 128
-depth = 128
-runs = 128
+depth = 512
+runs = 512
